--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-  <head><!-- where all the meta data will go, like and files we need to include -->
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
-
+   
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> 
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="darkblue">
+                <div id="purple"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
